BUG: CORE-3000 Title gets covered in expanded card
* Title no longer gets covered when card is expanded
* Fixed weird scroll bug on OSX

QA: Try to expand a card. The title should not be covered by the quick
filter bar.

--- a/app/styles/dataCards/cards.sass
+++ b/app/styles/dataCards/cards.sass
@@ -215,7 +215,6 @@ body
         padding: $metadata-side-padding / 2
         background-color: $cards-bg-color
         width: 100%
-        height: inherit
         box-sizing: border-box
         line-height: 1.5rem
 
